--- a/jenkins-account.yaml
+++ b/jenkins-account.yaml
@@ -30,7 +30,7 @@ rules:
 - apiGroups: [""]
   resources: ["persistentvolumeclaims"]
   verbs: ["create","delete","get","list","patch","update","watch"]
- 
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -69,3 +69,20 @@ rules:
 - apiGroups: [""]
   resources: ["persistentvolumes"]
   verbs: ["create","delete","get","list","patch","update","watch"]
+
+---
+apiVersion: v1
+
+kind: Secret
+
+type: kubernetes.io/service-account-token
+
+metadata:
+
+  name: jenkins-token-rk2mg
+
+  namespace: default
+
+  annotations:
+
+    kubernetes.io/service-account.name: "jenkins"
